<resources>
    <string name="app_name">Anon</string>

    <string name="app_title">anon.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="welcome_text">Be yourself.\nExpress yourself.\nNO Judgement.\nNO consequences.</string>
    <string name="title_activity_maps">Map</string>
    <string name="wits_title">WITS University</string>
    <string name="mtv_title">MTV Base</string>
    <string name="lock_info">anon. networks are only open when you are inside the area. Once inside the network, hit the key and we will log you in.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Enable location services to see posts around you within the Wits network.</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="locked">locked</string>
    <string name="unlocked">unlocked</string>
    <string name="network_enter_text">You are inside %1$s. Hit the key to enter this network.</string>
    <string name="back_to_map">Return to map</string>
    <string name="login_text">Welcome to anon. We are logging you in with temp details to check out the feed and post anonymously.</string>
    <string name="login_rules">Code of conduct: \n\n1. Be yourself. No one here cares about followers.\n2. Post what\'s on your mind, judgement free.\n3. Don\'t fuck it up for others! If your posts are continually reported, you will be suspended.\n4. Do not post people’s private information. Ever. Not cool.\n5. Check out our terms and privacy policy.\n6. Click \"Let me in\" to agree to the above</string>
    <string name="login_auth">Let me in</string>
    <string name="login_email_hint">Enter Email</string>
    <string name="login_pass_hint">Enter Password</string>
    <string name="validate_err">Please check that you\'ve submitted information correctly. We\'re having trouble logging you in.</string>
    <string name="loading">HANG TIGHT</string>
    <string name="temp_mail">temp7@iamanon.com</string>
    <string name="temp_pass">123456789</string>
    <string name="msgbrd_button">Notice-board</string>
    <string name="snpsht_button">Live</string>
    <string name="crtacnt_button">Create account</string>
    <string name="board_hint">What\'s on your mind?</string>
    <string name="q">\?</string>
    <string name="stamp_temp">10:35</string>
    <string name="count_temp">140</string>
    <string name="report">Report</string>
    <string name="board_link_text">PIN 📌</string>
    <string name="pin_link_text">Pin</string>
    <string name="live_link_text">LIVE 🗣</string>
    <string name="gender_hint_disabled">Create an account to show your gender.</string>
    <string name="gender_hint_on">Show gender for this post.</string>
    <string name="gender_hint_off">Do not show gender for this post.</string>
    <string name="mood_hint">Choose the mood for this post.</string>
    <!--moods-->
    <string name="in_love">in_love</string>
    <string name="sunglasses">sunglasses</string>
    <string name="open_mouth">open_mouth</string>
    <string name="pray_hands">pray_hands</string>
    <string name="tears">tears</string>
    <string name="pouting_face">pouting_face</string>
    <string name="no_eighteen">no_eighteen</string>
    <string name="neutral_face">neutral_face</string>
    <string name="frowning_face">frowning_face</string>
    <string name="fire">fire</string>
    <string name="clapping_hands">clapping_hands</string>
    <string name="raising_hands">raising_hands</string>

    <string name="privacy">Privacy →</string>
    <string name="terms_title">Terms of Service</string>


    <string name="temp_login_link">Return to temp login</string>
    <string name="email_info">Email: anontheapp@gmail.com</string>
    <string name="privacy_title">Privacy policy</string>
    <string name="terms_link">Terms →</string>
    <string name="gender_title">Tap your gender</string>
    <string name="gender_choose_hint">You may choose to display or hide your gender on each post.</string>
    <string name="email_hint">we need your email to keep your account secure. It will always remain hidden.</string>
    <string name="pass_title">Enter a password</string>
    <string name="pass_hint">So you don\'t have to go through the temp sign-in every time. What a bore.</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_title">Enter your email</string>
    <string name="acc_created">ACCOUNT CREATED</string>
    <string name="signup_mail">You need to enter an email address to create an account.</string>
    <string name="signup_pass_long">Your password isn\'t long enough. Use at least 8 characters.</string>
    <string name="signup_all">Complete all fields before signing up.</string>
    <string name="signup_gender">We need to know your gender, use the flower if you don\'t want to be specific.</string>
    <string name="signup_wrong_mail">This email address is associated to another account.</string>
    <string name="message_long">Your message is too long. Max 140 characters allowed.</string>
    <string name="location_default">Region not identified</string>
    <string name="user_deleted">Your account was deleted by some reason, sorry. We will redirect you to log in page once again.</string>
    <string name="anon_mail">anontheapp@gmail.com</string>
    <string name="mail_subject">Reporting an anon. post</string>
    <string name="mail_body">Hi, Sorry if someone said something that offended you. We want you to be comfortable using the app so let us know what time it was posted and in which network the post was sent from.\n The Anon Team</string>
    <string name="trash_time_alert">All these posts will disappear in %1$s.</string>
    <string name="mail_error_title">Could Not Send Email</string>
    <string name="mail_error_body">Your device could not send e-mail.  Please check e-mail configuration and try again.</string>
    <string name="snapshot_agenda">Snapshot of regions within Wits Braam campus</string>
    <string name="empty"/>
    <string name="done">Done</string>
    <string name="logout_desc">You will be logged out and have no access to posts if you are not in the network area.</string>
    <string name="sure">Are you sure?</string>
    <string name="logout_ok">Log me out</string>
    <string name="god_title">GOD MODE</string>
    <string name="submit">Submit</string>
    <string name="just_log_in">What are you doing? Just log in.</string>
    <string name="comments_off">Do not allow for live commentary.</string>
    <string name="ttl_hint">Delete post in %1$s</string>
    <string name="comments_on">Allow comments for this post 🗣</string>
    <string name="create_account_dialog">Would you like to create an account to show your gender?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ellipsis">…</string>
    <string name="face">😶</string>
    <string name="hourglass">⏳</string>
    <string name="rec_on">Recording</string>
    <string name="cancel">Cancel</string>
    <string name="speaker">🔈</string>
    <string name="gif">🎞</string>
    <string name="load_auth">Loading…</string>
    <string name="gif_welcome_title">Choose a Gif</string>
    <string name="gif_welcome_body">Scroll through; and tap a Gif if you want to include it in your post.</string>
    <string name="warn_words_body">What\'s up with the choice of words? Your post could be reported.</string>
    <string name="warn_words_title">Go easy now…</string>
    <string name="dang_words_body">Certain words just don\'t go down well with the Mob. Edit your message and try again.</string>
    <string name="dang_words_title">Whoa!</string>
    <string name="thumb_up">👍</string>
    <string name="ok_caps">OK</string>
    <string name="temp_tweet_body">What do I hate more than racism? Black on black hate. It\'s disgusting. Black on black placism. Black on black judgement. hhhhh hhhhhhhhhhhh.</string>
    <string name="gender_tweet">Gender: %1$s</string>
    <string name="ttl_tweet">Deleting in %1$s</string>
    <string name="wits_notice_board">Wits notice board</string>
    <string name="law_man">Comm, Law &amp; Man</string>
    <string name="barnato">Barnato</string>
    <string name="library_lawns">Library &amp; Lawns</string>
    <string name="matrix">Matrix</string>
    <string name="block">SH &amp; C.Block</string>
    <string name="jubes">Jubes</string>
    <string name="nav_pin_title">Pin Something</string>
    <string name="nav_mob_live">Anon. Mob Live</string>
    <plurals name="comment_count">
        <item quantity="zero">%d comment</item>
        <item quantity="one">%d comment</item>
        <item quantity="other">%d comments</item>
    </plurals>
    <string name="log_in">log in</string>
    <string name="board_welcome_body">Don\'t fuck it up for others by posting offensive shit. Long tap to report a post.</string>
    <string name="board_welcome_title">Welcome to anon.</string>
    <string name="new_love">Someone just liked your post.</string>
    <string name="new_comment">Someone just made a comment about your post.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="already_posted">You already reported this post, we\'re definitely on it</string>
    <string name="post_question">Would you like to report this post?</string>
    <string name="votes_count">%1$d members like this post.</string>

    <string name="like_butt_text">Like this post 🙂</string>
    <string name="comment_butt_text">Write a comment 🖍</string>
    <string name="region_name">\@%1$s</string>
    <string name="post_in_quotes">\'%1$s\'</string>
    <string name="comment_input_hint">Type here…</string>
    <string name="send">Send</string>
    <string name="landing_text">A Wits anonymous Notice Board</string>


</resources>
