<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.anontemp.android.DashBoard">

    <include layout="@layout/top_merge" />

    <android.support.constraint.Guideline
        android:id="@+id/leftIcon_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85"
        tools:layout_editor_absoluteX="327dp"
        tools:layout_editor_absoluteY="0dp" />


    <TextView
        android:id="@+id/messageBoard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="110dp"
        android:clickable="true"
        android:text="@string/msgbrd_button"
        android:textColor="@color/red_alpha"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/top_guide"
        app:layout_constraintLeft_toLeftOf="parent" />

    <View
        android:id="@+id/separator1"
        android:layout_width="2dp"
        android:layout_height="20dp"
        android:layout_marginBottom="31dp"
        android:layout_marginLeft="5dp"
        android:background="#000000"
        app:layout_constraintBottom_toTopOf="@+id/top_guide"
        app:layout_constraintLeft_toRightOf="@id/messageBoard" />

    <TextView
        android:id="@+id/snapshot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="5dp"
        android:clickable="true"
        android:text="@string/snpsht_button"
        android:textColor="@color/red_alpha"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/top_guide"
        app:layout_constraintLeft_toRightOf="@id/separator1" />

    <View
        android:id="@+id/separator2"
        android:layout_width="2dp"
        android:layout_height="20dp"
        android:layout_marginBottom="31dp"
        android:layout_marginLeft="5dp"
        android:background="#000000"
        app:layout_constraintBottom_toTopOf="@+id/top_guide"
        app:layout_constraintLeft_toRightOf="@id/snapshot" />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="5dp"
        android:clickable="true"
        android:text="@string/crtacnt_button"
        android:textColor="@color/red_alpha"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/top_guide"
        app:layout_constraintLeft_toRightOf="@id/separator2"
        app:layout_constraintRight_toRightOf="parent" />


    <android.support.design.widget.TextInputLayout

        android:id="@+id/boardInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        app:hintEnabled="false"
        app:layout_constraintLeft_toRightOf="@id/leftIcon_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/top_guide">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/boardInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ellipsize="start"
            android:enabled="false"
            android:fontFamily="serif"
            android:hint="@string/board_hint"
            android:inputType="textEmailAddress"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="21sp"

            />


    </android.support.design.widget.TextInputLayout>

    <View
        android:id="@+id/separator3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="120dp"
        android:layout_marginTop="13dp"
        android:background="@android:color/black"
        app:layout_constraintLeft_toRightOf="@id/leftIcon_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/boardInputLayout" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginRight="37dp"
        android:layout_marginTop="62dp"
        android:src="@mipmap/ic_pencil"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/top_guide" />

    <ImageView
        android:id="@+id/ivGlobe"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="25dp"
        android:src="@mipmap/ic_globe"
        app:layout_constraintLeft_toRightOf="@id/leftIcon_guideline"
        app:layout_constraintTop_toBottomOf="@id/boardInputLayout" />

    <TextView
        android:id="@+id/location"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:text="location"
        android:textColor="@color/black_alpha"
        app:layout_constraintLeft_toRightOf="@id/ivGlobe"
        app:layout_constraintTop_toBottomOf="@id/boardInputLayout" />

    <ImageView
        android:id="@+id/ivFace"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="25dp"
        android:src="@mipmap/ic_face"
        app:layout_constraintLeft_toRightOf="@id/location"
        app:layout_constraintTop_toBottomOf="@id/boardInputLayout" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/q"
        android:textColor="@color/black_alpha"
        app:layout_constraintLeft_toRightOf="@id/ivFace"
        app:layout_constraintTop_toBottomOf="@id/boardInputLayout" />

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/stamp_temp"
        android:textColor="@color/black_alpha"
        app:layout_constraintLeft_toRightOf="@id/status"
        app:layout_constraintTop_toBottomOf="@id/boardInputLayout" />

    <TextView
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/count_temp"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="italic"
        app:layout_constraintLeft_toRightOf="@id/timestamp"
        app:layout_constraintTop_toBottomOf="@id/boardInputLayout" />


</android.support.constraint.ConstraintLayout>
