<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context="com.anontemp.android.Login">

    <include layout="@layout/top_merge" />


    <android.support.constraint.Guideline
        android:id="@+id/top_main_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.21"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="129dp" />

    <android.support.constraint.Guideline
        android:id="@+id/left_main_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/right_main_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85"
        tools:layout_editor_absoluteX="327dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/blackSplat"
        android:layout_width="139dp"
        android:layout_height="72dp"
        android:layout_marginStart="174dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/black_smudge_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.anontemp.android.view.AnonTVSpecial
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:textAlignment="textStart"
        android:textColor="@color/text_special"
        android:textSize="21sp"
        app:layout_constraintLeft_toLeftOf="@+id/left_main_guide"
        app:layout_constraintRight_toLeftOf="@+id/right_main_guide"
        app:layout_constraintTop_toTopOf="@+id/top_main_guide" />

    <ImageView
        android:id="@+id/blackSplash"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:scaleType="fitXY"
        android:src="@drawable/black_splash1"
        app:layout_constraintRight_toLeftOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@+id/top_main_guide" />

    <com.anontemp.android.view.AnonTView
        android:id="@+id/links"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/login_rules"
        android:textSize="11sp"
        app:layout_constraintLeft_toLeftOf="@+id/left_main_guide"
        app:layout_constraintRight_toLeftOf="@+id/right_main_guide"
        app:layout_constraintTop_toTopOf="@+id/top_main_guide" />

    <android.support.constraint.Guideline
        android:id="@+id/bottom_main_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="597dp" />



    <android.support.design.widget.TextInputLayout

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="130dp"
        android:textAlignment="center"
        app:hintEnabled="false"
        app:hintTextAppearance="@style/RedHint"
        app:layout_constraintBottom_toTopOf="@+id/bottom_main_guide"
        app:layout_constraintLeft_toLeftOf="@+id/left_main_guide"
        app:layout_constraintRight_toLeftOf="@+id/right_main_guide">

        <com.anontemp.android.view.AnonTEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ellipsize="start"
            android:gravity="center"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/red_alpha"
            android:textColorHint="@color/black_alpha_more"
            android:textSize="17sp"

            />


    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="120dp"
        android:background="#000000"
        app:layout_constraintBottom_toTopOf="@+id/bottom_main_guide"
        app:layout_constraintLeft_toLeftOf="@+id/left_main_guide"
        app:layout_constraintRight_toLeftOf="@+id/right_main_guide" />

    <android.support.design.widget.TextInputLayout

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:hintTextAppearance="@style/RedHint"
        app:layout_constraintBottom_toTopOf="@+id/bottom_main_guide"
        app:layout_constraintLeft_toLeftOf="@+id/left_main_guide"
        app:layout_constraintRight_toLeftOf="@+id/right_main_guide">

        <com.anontemp.android.view.AnonTEditText
            android:id="@+id/passInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ellipsize="start"
            android:gravity="center"
            android:hint="@string/login_pass_hint"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/red_alpha"
            android:textColorHint="@color/black_alpha_more"
            android:textSize="17sp"


            />


    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="70dp"
        android:background="#000000"
        app:layout_constraintBottom_toTopOf="@+id/bottom_main_guide"
        app:layout_constraintLeft_toLeftOf="@+id/left_main_guide"
        app:layout_constraintRight_toLeftOf="@+id/right_main_guide" />


    <com.anontemp.android.view.AnonTButton
        android:id="@+id/temp_login_button"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginBottom="27dp"
        android:background="@drawable/bg_round_rect"
        android:text="@string/log_in"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintBottom_toTopOf="@+id/bottom_main_guide"
        app:layout_constraintLeft_toLeftOf="@+id/left_main_guide"
        app:layout_constraintRight_toLeftOf="@+id/right_main_guide"/>

    <com.anontemp.android.view.AnonTButton
        android:id="@+id/authenticate_button"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bg_round_rect_black"
        android:text="@string/login_auth"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/left_main_guide"
        app:layout_constraintRight_toLeftOf="@+id/right_main_guide"/>

</android.support.constraint.ConstraintLayout>
