<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.anontemp.android.TermsAndPrivacy">

    <android.support.constraint.Guideline
        android:id="@+id/top_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="99dp" />

    <android.support.constraint.Guideline
        android:id="@+id/top_main_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="185dp" />

    <android.support.constraint.Guideline
        android:id="@+id/leftIcon_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/left_main_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:src="@mipmap/ic_logo"
        app:layout_constraintBottom_toTopOf="@+id/top_guide"
        app:layout_constraintLeft_toLeftOf="@+id/leftIcon_guideline" />

    <com.anontemp.android.view.AnonTView
        android:id="@+id/upperLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:clickable="true"
        android:text="@string/privacy"
        android:textColor="@color/red_alpha"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/top_guide"
        app:layout_constraintRight_toLeftOf="@+id/right_guideline" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/black_alpha"
        app:layout_constraintBottom_toTopOf="@+id/top_guide"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <android.support.constraint.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.constraint.Guideline
        android:id="@+id/bottom_main_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />


    <com.anontemp.android.view.AnonTView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_title"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="@+id/left_main_guide"
        app:layout_constraintTop_toTopOf="@+id/top_main_guide" />


    <ScrollView
        android:id="@+id/termsContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="@id/bottom_main_guide"
        app:layout_constraintLeft_toRightOf="@+id/left_main_guide"
        app:layout_constraintRight_toLeftOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <com.anontemp.android.view.AnonTView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_round_rect_black_border"
            android:padding="8dp"
            android:scrollbars="vertical"
            android:text="@string/terms_content"
            android:textSize="9sp"
            android:typeface="serif" />
    </ScrollView>


    <com.anontemp.android.view.AnonTView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/email_info"
        android:textColor="@color/black_alpha"
        android:textSize="10sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="@+id/left_main_guide"
        app:layout_constraintTop_toBottomOf="@+id/termsContent" />

    <com.anontemp.android.view.AnonTView
        android:id="@+id/tempLoginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:clickable="true"
        android:text="@string/temp_login_link"
        android:textColor="@color/red_alpha"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/termsContent" />


</android.support.constraint.ConstraintLayout>
